<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lynxmotion_ssc32u_msgs</name>
  <version>0.1.0</version>
  <description>ROS message definitions for Lynxmotion SSC32U.</description>
  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/smd-ros-devel/lynxmotion_ssc32u</url>
  <url type="bugtracker">https://github.com/smd-ros-devel/lynxmotion_ssc32u/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>