<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lynxmotion_ssc32u_utils</name>
  <version>0.1.0</version>
  <description>Utilities for the Lynxmotion SSC-32U servo controller.</description>
  <maintainer email="mattric@gmail.com">matt</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/smd-ros-devel/lynxmotion_ssc32u</url>
  <url type="bugtracker">https://github.com/smd-ros-devel/lynxmotion_ssc32u/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
