<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssc32u_controllers</name>
  <version>0.0.0</version>
  <description>Controllers for the Lynxmotion SSC32U.</description>
  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/smd-ros-devel/lynxmotion_ssc32</url>
  <url type="repository">https://github.com/smd-ros-devel/lynxmotion_ssc32/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
