<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssc32u_driver</name>
  <version>0.1.0</version>
  <description>The lynxmotion_ssc32 package contains a ROS driver for the Lynxmotion SSC-32 servo controller.</description>
  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/smd-ros-devel/lynxmotion_ssc32</url>
  <url type="repository">https://github.com/smd-ros-devel/lynxmotion_ssc32/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ssc32u_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ssc32u_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
